Fix crash when calling Map.clearData at application startup

Task-number: QTBUG-67759
Change-Id: Ie14291ed099aef520ca158c7d146c46ad49625d7
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>